--- a/src/main/webapp/partials/account-history.html
+++ b/src/main/webapp/partials/account-history.html
@@ -22,8 +22,8 @@
         <table id="capHistoryScrollTable" ng-hide="!isChar" style="width: 1310px; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
           <thead style="display: block;">
           <tr>
-            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap;">Sync Start</td>
-            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap;">Sync End</td>
+            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap; height: 12em;">Sync Start</td>
+            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap; height: 12em;">Sync End</td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Account Status" class="history-label history-label-rot">Account Status</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Account Balance Status" class="history-label history-label-rot">Balance</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Asset List Status" class="history-label history-label-rot">Assets</div></div></td>
@@ -73,8 +73,8 @@
         <table ng-hide="isChar" id="corpHistoryScrollTable" style="width: 1220px; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
           <thead style="display: block;">
           <tr>
-            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap;">Sync Start</td>
-            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap;">Sync End</td>
+            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap; height: 12em;">Sync Start</td>
+            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap; height: 12em;">Sync End</td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Account Balance Status" class="history-label history-label-rot">Balance</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Asset List Status" class="history-label history-label-rot">Assets</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Blueprints Status" class="history-label history-label-rot">Blueprints</div></div></td>
