--- a/src/main/webapp/partials/admin-inflight.html
+++ b/src/main/webapp/partials/admin-inflight.html
@@ -19,8 +19,8 @@
       <div class="panel-body">
         <table style="width: 100%; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
           <tr>
-            <td align="center" valign="bottom" class="history-label">Sync Start</td>
-            <td align="center" valign="bottom" class="history-label">Sync End</td>
+            <td align="center" valign="bottom" class="history-label" style="height: 12em;">Sync Start</td>
+            <td align="center" valign="bottom" class="history-label" style="height: 12em;">Sync End</td>
             <td><div class="sync-history-cont"><div title="Account Status" class="history-label history-label-rot">Account Status</div></div></td>
             <td><div class="sync-history-cont"><div title="Account Balance Status" class="history-label history-label-rot">Balance</div></div></td>
             <td><div class="sync-history-cont"><div title="Asset List Status" class="history-label history-label-rot">Assets</div></div></td>
@@ -58,8 +58,8 @@
             <td align="center" valign="bottom" class="account-label">Actions</td>
           </tr>
           <tr ng-repeat="his in charSyncHistory">
-            <td align="center" class="entry-label">{{getStartTime(true, his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
-            <td align="center" class="entry-label">{{getEndTime(true, his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
+            <td align="center" class="entry-label">{{getStartTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
+            <td align="center" class="entry-label">{{getEndTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
             <td ng-repeat="stat in charStatusFunctions" class="{{determineHistoryClass(true, his, $index)}}" title="{{determineHistoryTitle(true, his, $index)}}"></td>
             <td align="center">
               <button type="button" class="btn btn-primary" ng-click="displayDetail(his.account.userAccount.uid, his.account.aid, his.tid)">Details</button>
@@ -80,8 +80,8 @@
       <div class="panel-body">
         <table style="width: 100%; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
           <tr>
-            <td align="center" valign="bottom" class="history-label">Sync Start</td>
-            <td align="center" valign="bottom" class="history-label">Sync End</td>
+            <td align="center" valign="bottom" class="history-label" style="height: 12em;">Sync Start</td>
+            <td align="center" valign="bottom" class="history-label" style="height: 12em;">Sync End</td>
             <td><div class="sync-history-cont"><div title="Account Balance Status" class="history-label history-label-rot">Balance</div></div></td>
             <td><div class="sync-history-cont"><div title="Asset List Status" class="history-label history-label-rot">Assets</div></div></td>
             <td><div class="sync-history-cont"><div title="Blueprints Status" class="history-label history-label-rot">Blueprints</div></div></td>
@@ -116,8 +116,8 @@
             <td align="center" valign="bottom" class="account-label">Actions</td>
           </tr>
           <tr ng-repeat="his in corpSyncHistory">
-            <td align="center" class="entry-label">{{getStartTime(false, his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
-            <td align="center" class="entry-label">{{getEndTime(false, his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
+            <td align="center" class="entry-label">{{getStartTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
+            <td align="center" class="entry-label">{{getEndTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
             <td ng-repeat="stat in corpStatusFunctions" class="{{determineHistoryClass(false, his, $index)}}" title="{{determineHistoryTitle(false, his, $index)}}"></td>
             <td align="center">
               <button type="button" class="btn btn-primary" ng-click="displayDetail(his.account.userAccount.uid, his.account.aid, his.tid)">Details</button>
@@ -138,27 +138,25 @@
       <div class="panel-body">
         <table style="width: 100%; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
           <tr>
-            <td align="center" valign="bottom" class="history-label">Sync Start</td>
-            <td align="center" valign="bottom" class="history-label">Sync End</td>
+            <td align="center" valign="bottom" class="history-label" style="height: 12em;">Scheduled</td>
+            <td align="center" valign="bottom" class="history-label" style="height: 12em;">Sync Start</td>
             <td><div class="sync-history-cont"><div title="Server Status Status" class="history-label history-label-rot">Server Status</div></div></td>
-            <td><div class="sync-history-cont"><div title="API Call List Status" class="history-label history-label-rot">API Calls</div></div></td>
             <td><div class="sync-history-cont"><div title="Alliance List Status" class="history-label history-label-rot">Alliances</div></div></td>
-            <td><div class="sync-history-cont"><div title="Conquerable Station List Status" class="history-label history-label-rot">Conq. Stations</div></div></td>
-            <td><div class="sync-history-cont"><div title="Error List Status" class="history-label history-label-rot">Error List</div></div></td>
-            <td><div class="sync-history-cont"><div title="Faction War Stats Status" class="history-label history-label-rot">Fac. War Stats</div></div></td>
-            <td><div class="sync-history-cont"><div title="Faction War Top Stats Status" class="history-label history-label-rot">Fac. War Top Stats</div></div></td>
-            <td><div class="sync-history-cont"><div title="Ref Types Status" class="history-label history-label-rot">Ref Types</div></div></td>
-            <td><div class="sync-history-cont"><div title="Skill Tree Status" class="history-label history-label-rot">Skill Tree</div></div></td>
+            <td><div class="sync-history-cont"><div title="Sovereignty Map Status" class="history-label history-label-rot">Sov. Map</div></div></td>
+            <td><div class="sync-history-cont"><div title="Sovereignty Campaigns Status" class="history-label history-label-rot">Sov. Campaigns</div></div></td>
+            <td><div class="sync-history-cont"><div title="Sovereignty Structures Status" class="history-label history-label-rot">Sov. Structures</div></div></td>
+            <td><div class="sync-history-cont"><div title="Faction Wars Status" class="history-label history-label-rot">Faction Wars</div></div></td>
+            <td><div class="sync-history-cont"><div title="Faction War Statistics Status" class="history-label history-label-rot">Fac. War Stats</div></div></td>
             <td><div class="sync-history-cont"><div title="Faction War Systems Status" class="history-label history-label-rot">Fac. War Systems</div></div></td>
-            <td><div class="sync-history-cont"><div title="Map Jumps Status" class="history-label history-label-rot">Map Jumps</div></div></td>
-            <td><div class="sync-history-cont"><div title="Map Kills Status" class="history-label history-label-rot">Map Kills</div></div></td>
-            <td><div class="sync-history-cont"><div title="Sovereignty Status" class="history-label history-label-rot">Sovereignty</div></div></td>
+            <td><div class="sync-history-cont"><div title="Faction War Leaders Status" class="history-label history-label-rot">Fac. War Leaders</div></div></td>
+            <td><div class="sync-history-cont"><div title="Faction War Corporation Leaders Status" class="history-label history-label-rot">Fac. War Corp. Leaders</div></div></td>
+            <td><div class="sync-history-cont"><div title="Faction War Character Leaders Status" class="history-label history-label-rot">Fac. War Char. Leaders</div></div></td>
             <td align="center" valign="bottom" class="account-label">Actions</td>
           </tr>
           <tr ng-repeat="his in refSyncHistory">
-            <td align="center" class="entry-label">{{getStartTime(false, his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
-            <td align="center" class="entry-label">{{getEndTime(false, his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
-            <td ng-repeat="stat in refStatusFunctions" class="{{determineRefHistoryClass(false, his, $index)}}" title="{{determineRefHistoryTitle(false, his, $index)}}"></td>
+            <td align="center" class="entry-label">{{getScheduled(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
+            <td align="center" class="entry-label">{{getStartTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
+            <td ng-repeat="stat in endpointList" class="{{determineRefHistoryClass(his, stat)}}" title="{{determineRefHistoryTitle(his, stat)}}"></td>
             <td align="center">
               <button type="button" class="btn btn-primary" ng-click="displayRefDetail(his.tid)">Details</button>
               <button type="button" class="btn btn-primary" ng-click="finishRefSync(his.tid)">Finish Sync</button>
