--- a/src/main/webapp/themes/default/evekit.css
+++ b/src/main/webapp/themes/default/evekit.css
@@ -38,9 +38,9 @@
 	color: #e59210; 
 }
 
-.sync-history-nop {
-	background-color: #000;
-}
+/*.sync-history-nop {*/
+	/*background-color: #000;*/
+/*}*/
 
 .panel-title {
 	font-weight: bold;
