--- a/src/main/webapp/partials/admin-ref-history.html
+++ b/src/main/webapp/partials/admin-ref-history.html
@@ -16,28 +16,26 @@
       <table id="refHistoryScrollTable" style="width: 680px; padding: 0px; border-collapse: separate; border-spacing: 4px; border: 0px;">
         <thead style="display: block;">
           <tr>
-            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap;">Sync Start</td>
-            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap;">Sync End</td>
+            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap; height: 12em;">Sync Start</td>
+            <td align="center" valign="bottom" class="history-label" style="width: 134px; white-space: nowrap; height: 12em;">Sync End</td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Server Status Status" class="history-label history-label-rot">Server Status</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="API Call List Status" class="history-label history-label-rot">API Calls</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Alliance List Status" class="history-label history-label-rot">Alliances</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Conqerable Station List Status" class="history-label history-label-rot">Conq. Stations</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Error List Status" class="history-label history-label-rot">Error List</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Stats Status" class="history-label history-label-rot">Fac. War Stats</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Top Stats Status" class="history-label history-label-rot">Fac. War Top Stats</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Ref Types Status" class="history-label history-label-rot">Ref Types</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Skill Tree Status" class="history-label history-label-rot">Skill Tree</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Sovereignty Map Status" class="history-label history-label-rot">Sov. Map</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Sovereignty Campaigns Status" class="history-label history-label-rot">Sov. Campaigns</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Sovereignty Structures Status" class="history-label history-label-rot">Sov. Structures</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction Wars Status" class="history-label history-label-rot">Faction Wars</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Statistics Status" class="history-label history-label-rot">Fac. War Stats</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Systems Status" class="history-label history-label-rot">Fac. War Systems</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Map Jumps Status" class="history-label history-label-rot">Map Jumps</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Map Kills Status" class="history-label history-label-rot">Map Kills</div></div></td>
-            <td style="width: 26px;"><div class="sync-history-cont"><div title="Sovereignty Status" class="history-label history-label-rot">Sovereignty</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Leaders Status" class="history-label history-label-rot">Fac. War Leaders</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Corporation Leaders Status" class="history-label history-label-rot">Fac. War Corp. Leaders</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Faction War Character Leaders Status" class="history-label history-label-rot">Fac. War Char. Leaders</div></div></td>
           </tr>
         </thead>
         <tbody id="refHistoryScroll" style="display: block; overflow-y: scroll;">
         <tr ng-repeat="his in syncHistory">
           <td align="center" class="entry-label" style="white-space: nowrap;">{{getStartTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
           <td align="center" class="entry-label" style="white-space: nowrap;">{{getEndTime(his)|date:'yyyy-MM-dd HH:mm:ss':'UTC'}}</td>
-          <td ng-repeat="stat in statusPointerArray" class="{{determineRefHistoryClass(his, $index)}}" style="width: 26px;" title="{{determineRefHistoryTitle(his, $index)}}"></td>
+          <td ng-repeat="stat in endpointList" class="{{determineRefHistoryClass(his, stat)}}" style="width: 26px;" title="{{determineRefHistoryTitle(his, stat)}}"></td>
         </tr>
         </tbody>
       </table>
