prep for release

--- a/src/main/webapp/partials/account-history.html
+++ b/src/main/webapp/partials/account-history.html
@@ -67,6 +67,7 @@
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Facilities Status" class="history-label history-label-rot">Facilities</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Medals Status" class="history-label history-label-rot">Medals</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Membership Status" class="history-label history-label-rot">Membership</div></div></td>
+            <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Shareholders Status" class="history-label history-label-rot">Shareholders</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Sheet Status" class="history-label history-label-rot">Sheet</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Starbases Status" class="history-label history-label-rot">Starbases</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Structures Status" class="history-label history-label-rot">Structures</div></div></td>
