--- a/src/main/webapp/partials/admin-inflight.html
+++ b/src/main/webapp/partials/admin-inflight.html
@@ -65,7 +65,7 @@
             <td><div class="sync-history-cont"><div title="Online Status" class="history-label history-label-rot">Online</div></div></td>
             <td><div class="sync-history-cont"><div title="Opportunities Status" class="history-label history-label-rot">Opportunities</div></div></td>
             <td><div class="sync-history-cont"><div title="Planetary Colonies Status" class="history-label history-label-rot">Planetary Colonies</div></div></td>
-            <td><div class="sync-history-cont"><div title="Character Sheet Status" class="history-label history-label-rot">Sheet</div></div></td>
+            <td><div class="sync-history-cont"><div title="Character Sheet Status" class="history-label history-label-rot">Sheet (CHAR)</div></div></td>
             <td><div class="sync-history-cont"><div title="Ship Type Status" class="history-label history-label-rot">Ship Type</div></div></td>
             <td><div class="sync-history-cont"><div title="Skill Queue Status" class="history-label history-label-rot">Skill Queue</div></div></td>
             <td><div class="sync-history-cont"><div title="Skills Status" class="history-label history-label-rot">Skills</div></div></td>
@@ -77,7 +77,8 @@
             <td><div class="sync-history-cont"><div title="Facilities Status" class="history-label history-label-rot">Facilities</div></div></td>
             <td><div class="sync-history-cont"><div title="Medals Status" class="history-label history-label-rot">Medals</div></div></td>
             <td><div class="sync-history-cont"><div title="Membership Status" class="history-label history-label-rot">Membership</div></div></td>
-            <td><div class="sync-history-cont"><div title="Sheet Status" class="history-label history-label-rot">Sheet</div></div></td>
+            <td><div class="sync-history-cont"><div title="Shareholders Status" class="history-label history-label-rot">Shareholders</div></div></td>
+            <td><div class="sync-history-cont"><div title="Corporation Sheet Status" class="history-label history-label-rot">Sheet (CORP)</div></div></td>
             <td><div class="sync-history-cont"><div title="Starbases Status" class="history-label history-label-rot">Starbases</div></div></td>
             <td><div class="sync-history-cont"><div title="Structures Status" class="history-label history-label-rot">Structures</div></div></td>
             <td><div class="sync-history-cont"><div title="Titles Status" class="history-label history-label-rot">Titles</div></div></td>
