--- a/src/main/webapp/partials/account-view.html
+++ b/src/main/webapp/partials/account-view.html
@@ -39,9 +39,6 @@
                                         <div class="btn-group pull-right">
                                             <button type="button" class="btn btn-default" ng-hide="account.markedForDelete != -1"
                                                     ng-click="$location.url('/account/history/' + account.aid + '/' + account.characterType + '/' + account.name)">Sync History</button>
-                                            <button type="button" class="btn btn-default"
-                                                    ng-hide="account.markedForDelete !== -1 || account.eveCharacterID === -1"
-                                                    ng-click="sendSyncRequest(account);">Sync Now</button>
                                             <a href="{{'snapshot?acct=' + account.aid}}" target="_blank" class="btn btn-default" role="button">Latest Snapshot</a>
                                             <button type="button" class="btn btn-default" ng-hide="account.markedForDelete != -1"
                                                     ng-click="$location.url('/access/view/' + account.aid + '/' + account.characterType + '/' + account.name + '/' + account.eveCharacterName + '/' + account.eveCorporationName + '/' + account.eveCharacterID + '/' + account.eveCorporationID)">Access Keys</button>
@@ -323,7 +320,7 @@
                         <tr ng-repeat="ep in scopeList">
                             <td nowrap style="padding-left: 6px; padding-right: 6px;">
                                 <div class="checkbox">
-                                    <input type="checkbox" ng-model="currentScopeSelection[ep.name]">
+                                    <input type="checkbox" ng-model="currentScopeSelection[ep.scope]">
                                     <b>{{ep.scope}}</b>
                                 </div>
                             </td>
