fix tracking history display

--- a/src/main/webapp/partials/account-history.html
+++ b/src/main/webapp/partials/account-history.html
@@ -34,6 +34,8 @@
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Kill Log Status" class="history-label history-label-rot">Kills</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Market Order Status" class="history-label history-label-rot">Market</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Mining Ledger Status" class="history-label history-label-rot">Mining</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Character Sheet Status" class="history-label history-label-rot">Char Sheet</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Corporation Sheet Status" class="history-label history-label-rot">Corp Sheet</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Standings Status" class="history-label history-label-rot">Standings</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Wallet Balance Status" class="history-label history-label-rot">Balance</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Wallet Journal Status" class="history-label history-label-rot">Journal</div></div></td>
@@ -55,7 +57,6 @@
             <td ng-show="isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Online Status" class="history-label history-label-rot">Online</div></div></td>
             <td ng-show="isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Opportunities Status" class="history-label history-label-rot">Opportunities</div></div></td>
             <td ng-show="isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Planetary Colonies Status" class="history-label history-label-rot">Planetary Colonies</div></div></td>
-            <td ng-show="isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Character Sheet Status" class="history-label history-label-rot">Sheet</div></div></td>
             <td ng-show="isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Ship Type Status" class="history-label history-label-rot">Ship Type</div></div></td>
             <td ng-show="isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Skill Queue Status" class="history-label history-label-rot">Skill Queue</div></div></td>
             <td ng-show="isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Skills Status" class="history-label history-label-rot">Skills</div></div></td>
@@ -68,7 +69,6 @@
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Medals Status" class="history-label history-label-rot">Medals</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Membership Status" class="history-label history-label-rot">Membership</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Shareholders Status" class="history-label history-label-rot">Shareholders</div></div></td>
-            <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Sheet Status" class="history-label history-label-rot">Sheet</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Starbases Status" class="history-label history-label-rot">Starbases</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Structures Status" class="history-label history-label-rot">Structures</div></div></td>
             <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Titles Status" class="history-label history-label-rot">Titles</div></div></td>
