revert - corp sheets synced for chars

--- a/src/main/webapp/partials/account-history.html
+++ b/src/main/webapp/partials/account-history.html
@@ -34,8 +34,8 @@
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Kill Log Status" class="history-label history-label-rot">Kills</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Market Order Status" class="history-label history-label-rot">Market</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Mining Ledger Status" class="history-label history-label-rot">Mining</div></div></td>
-            <td ng-show="isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Character Sheet Status" class="history-label history-label-rot">Char Sheet</div></div></td>
-            <td ng-show="!isChar" style="width: 26px;"><div class="sync-history-cont"><div title="Corporation Sheet Status" class="history-label history-label-rot">Corp Sheet</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Character Sheet Status" class="history-label history-label-rot">Char Sheet</div></div></td>
+            <td style="width: 26px;"><div class="sync-history-cont"><div title="Corporation Sheet Status" class="history-label history-label-rot">Corp Sheet</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Standings Status" class="history-label history-label-rot">Standings</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Wallet Balance Status" class="history-label history-label-rot">Balance</div></div></td>
             <td style="width: 26px;"><div class="sync-history-cont"><div title="Wallet Journal Status" class="history-label history-label-rot">Journal</div></div></td>
